k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grupo-cordillera-ingress
  namespace: grupo-cordillera
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: grupo-cordillera.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8088
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-web2
                port:
                  number: 80
